2002-12-16 Damien Sandras  <dsandras@seconix.com>

	* src/menu.cpp, src/menu.h: Made public the function that permits 
	to build a menu from a struct so that it can be reused elsewhere.

	* src/ldap_window.cpp: Now use the GtkTreePath to determine what
	notebook page to show. Added context menu (not working yet) to the
	servers list.
	
2002-12-11 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Incremented schema_age.

	* gnomemeeting.schemas.in.in: Added keys for the future addressbook.
	Removed old ldap_servers_list key from the history as it is not 
	needed anymore.

	* src/common.h, src/ils.cpp, src/ldap_window.cpp: Rewrote the LDAP 
	browser so that it can contain (in the future) local contacts
	and filters too. Currently you still need to add servers manually
	in the new gconf key.
	(/apps/gnomemeeting/contacts/servers/ldap_servers_list)

	
2002-12-09 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Changed == to = for FreeBSD compatibility (roger).

	* src/ils.h: Removed unuseful include.

	* src/misc.cpp: Do not compile PAssertFunc with static libs.
	
2002-12-09 Damien Sandras  <dsandras@seconix.com>

	* src/main_window.cpp: Fixed the compilation with --disable-gnome.

	* src/videograbber.cpp: Fixed the compilation with --disable-gnome.

2002-12-09 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Added missing RingLine (0, 0) when remote
	stops calling. Removed the unuseful RingLing (0, 0) from
	the Incoming call timeout.
	
2002-12-09 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Added RingLine (0, 0) in the IncomingCallTimeout.

	* src/lid.cpp: Removed unuseful RingLine (0, 0). Thanks to
	Alexandre Aractingi for the VOIP Blaster debug!
	
2002-12-08 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Remove G.711 hw from the capabilities if the 
	software codecs can be used.

	* src/lid.cpp: Added missing mutex to fix crash on exit.
	
2002-12-07 Damien Sandras  <dsandras@seconix.com>
