@@ -1,3 +1,7 @@
+2002-12-18 Damien Sandras  <dsandras@seconix.com>
+
+	* src/ldap_window.cpp: Fixed crash when refreshing server listing.
+	
 2002-12-16 Damien Sandras  <dsandras@seconix.com>
 
 	* src/menu.cpp, src/menu.h: Made public the function that permits 
